java graphics warning removal